--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "siesa-agents": "./bin/install.js"
   },
   "scripts": {
-    "postinstall": "node ./bin/install.js",
-    "build": "echo 'Build complete'"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "postinstall": "node ./bin/install.js"
   },
   "keywords": [
     "siesa",
@@ -36,6 +39,25 @@
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "siesa-ui-kit": "^1.0.40",
+    "single-spa-react": "^6.0.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "jsdom": "^28.0.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
+    "vite-plugin-single-spa": "^1.1.0",
+    "vitest": "^4.0.18"
   }
 }
