--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,11 +42,11 @@ story_location: _bmad-output/implementation-artifacts
 development_status:
   epic-1: in-progress
   1-1-module-initialization-shell-integration: done
-  1-2-database-seed-data-setup: review
-  1-3-warehouse-list-summary-api: ready-for-dev
-  1-4-dashboard-aggregated-kpis: backlog
-  1-5-dashboard-visualizations-chart-alerts: backlog
-  1-6-internationalization-i18n: backlog
+  1-2-database-seed-data-setup: done
+  1-3-warehouse-list-summary-api: done
+  1-4-dashboard-aggregated-kpis: ready-for-dev
+  1-5-dashboard-visualizations-chart-alerts: ready-for-dev
+  1-6-internationalization-i18n: ready-for-dev
   epic-1-retrospective: optional
 
   epic-2: backlog
