--- a/packages/mf-inventory/package.json
+++ b/packages/mf-inventory/package.json
@@ -9,10 +9,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "siesa-ui-kit": "^1.0.40",
+    "siesa-ui-kit": "^1.0.41",
     "single-spa-react": "^6.0.2"
   },
   "devDependencies": {
