--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -44,8 +44,8 @@ development_status:
   1-1-module-initialization-shell-integration: done
   1-2-database-seed-data-setup: done
   1-3-warehouse-list-summary-api: done
-  1-4-dashboard-aggregated-kpis: ready-for-dev
-  1-5-dashboard-visualizations-chart-alerts: ready-for-dev
+  1-4-dashboard-aggregated-kpis: done
+  1-5-dashboard-visualizations-chart-alerts: review
   1-6-internationalization-i18n: ready-for-dev
   epic-1-retrospective: optional
 
