--- a/packages/mf-inventory/package.json
+++ b/packages/mf-inventory/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-router": "^1.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.7.0",
     "siesa-ui-kit": "^1.0.41",
     "single-spa-react": "^6.0.2"
   },
