--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -45,16 +45,16 @@ development_status:
   1-2-database-seed-data-setup: done
   1-3-warehouse-list-summary-api: done
   1-4-dashboard-aggregated-kpis: done
-  1-5-dashboard-visualizations-chart-alerts: review
-  1-6-internationalization-i18n: ready-for-dev
+  1-5-dashboard-visualizations-chart-alerts: done
+  1-6-internationalization-i18n: done
   epic-1-retrospective: optional
 
-  epic-2: backlog
-  2-1-product-list-api-with-pagination: backlog
-  2-2-product-list-ui: backlog
-  2-3-global-search-implementation: backlog
-  2-4-advanced-filtering: backlog
-  2-5-sorting-kpi-navigation: backlog
+  epic-2: in-progress
+  2-1-product-list-api-with-pagination: done
+  2-2-product-list-ui: done
+  2-3-global-search-implementation: review
+  2-4-advanced-filtering: ready-for-dev
+  2-5-sorting-kpi-navigation: ready-for-dev
   epic-2-retrospective: optional
 
   epic-3: backlog
