--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "fs-extra": "^11.1.1",
+    "i18next": "^25.8.6",
     "path": "^0.12.7",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
     "siesa-ui-kit": "^1.0.41",
     "single-spa-react": "^6.0.2"
   },
