--- a/packages/mf-inventory/package.json
+++ b/packages/mf-inventory/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.15.0",
+    "i18next": "^25.8.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "recharts": "^3.7.0",
     "siesa-ui-kit": "^1.0.41",
     "single-spa-react": "^6.0.2"
