--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -52,12 +52,12 @@ development_status:
   epic-2: in-progress
   2-1-product-list-api-with-pagination: done
   2-2-product-list-ui: done
-  2-3-global-search-implementation: review
-  2-4-advanced-filtering: ready-for-dev
-  2-5-sorting-kpi-navigation: ready-for-dev
+  2-3-global-search-implementation: done
+  2-4-advanced-filtering: done
+  2-5-sorting-kpi-navigation: done
   epic-2-retrospective: optional
 
-  epic-3: backlog
-  3-1-product-detail-api: backlog
-  3-2-product-detail-ui: backlog
+  epic-3: in-progress
+  3-1-product-detail-api: ready-for-dev
+  3-2-product-detail-ui: ready-for-dev
   epic-3-retrospective: optional
