feat: Implement Product Detail API and UI
- Added ProductDetailDto and WarehouseStockDto for detailed product information.
- Created GetProductByIdAsync method in ProductService to fetch product details.
- Implemented ProductsController endpoint for retrieving product details by ID.
- Developed ProductDetail component in the UI to display product information and warehouse stock.
- Added unit and integration tests for ProductService and ProductsController.
- Updated translations for product details in English and Spanish.
- Refactored existing code for improved structure and maintainability.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -58,6 +58,6 @@ development_status:
   epic-2-retrospective: optional
 
   epic-3: in-progress
-  3-1-product-detail-api: ready-for-dev
-  3-2-product-detail-ui: ready-for-dev
+  3-1-product-detail-api: done
+  3-2-product-detail-ui: done
   epic-3-retrospective: optional
